[package]
name = "chronos-parser-rs"
version = "0.1.382"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Rust crate for CROND parser."
repository="https://github.com/j5ik2o/chronos-parser-rs"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
intervals-rs = "0.0.5"
chrono = "0.4.38"
rust-fp-categories = "0.0.5"
rust-fp-pfds = "0.0.4"
oni-comb-parser-rs = "0.0.677"

[dev-dependencies]
env_logger = "0.11.3"
